[metadata]
name=htmllink
version=1
description=Create .html file redirecting to web page.
long_description=file: README.md
long_description_content_type=text/markdown
license_file=LICENSE
url=https://github.com/y-marui/htmllink

[options]
package_dir=
    =src

[options.entry_points]
console_scripts=
    htmllink=htmllink:generate